Revert a few refactorings causing errors