@@ -79,47 +79,52 @@ public class ConnectionTest extends HazelcastTestSupport {
         final AtomicInteger cc = new AtomicInteger();
 
         final Set<Socket> sockets = Collections.newSetFromMap(new ConcurrentHashMap<>());
-        final Thread st = Thread.ofVirtual().name("server-socket").unstarted(() -> {
-            while (!isInterrupted()) {
-                try {
-                    Socket socket = serverSocket.accept();
-                    sockets.add(socket);
-                } catch (IOException ignored) {
+        final Thread st = new Thread("server-socket") {
+            public void run() {
+                while (!isInterrupted()) {
+                    try {
+                        Socket socket = serverSocket.accept();
+                        sockets.add(socket);
+                    } catch (IOException ignored) {
+                    }
                 }
             }
-        });
+        };
         st.start();
 
         final AtomicBoolean flag = new AtomicBoolean(false);
         for (int i = 0; i < count; i++) {
             final Socket clientSocket = new Socket();
-            Thread t = Thread.ofVirtual().name("client-socket-" + i).unstarted(() -> {
-                try {
-                    if (cc.incrementAndGet() > count / 5 && Math.random() > .87f && flag.compareAndSet(false, true)) {
-                        st.interrupt();
-                        serverSocket.close();
-                        try {
-                            st.join();
-                        } catch (InterruptedException e) {
-                            e.printStackTrace();
+            Thread t = new Thread("client-socket-" + i) {
+                public void run() {
+                    try {
+                        if (cc.incrementAndGet() > count / 5 && Math.random() > .87f && flag.compareAndSet(false, true)) {
+                            st.interrupt();
+                            serverSocket.close();
+                            try {
+                                st.join();
+                            } catch (InterruptedException e) {
+                                e.printStackTrace();
+                            }
+                            Iterator<Socket> iter = sockets.iterator();
+                            while (iter.hasNext()) {
+                                Socket socket = iter.next();
+                                socket.shutdownOutput();
+                                socket.close();
+                                iter.remove();
+                            }
+                        } else {
+                            clientSocket.connect(new InetSocketAddress(13131));
+                            connected.incrementAndGet();
+                            clientSocket.getInputStream().read();
                         }
-                        Iterator<Socket> iter = sockets.iterator();
-                        while (iter.hasNext()) {
-                            Socket socket = iter.next();
-                            socket.shutdownOutput();
-                            socket.close();
-                            iter.remove();
-                        }
-                    } else {
-                        clientSocket.connect(new InetSocketAddress(13131));
-                        connected.incrementAndGet();
-                        clientSocket.getInputStream().read();
+                    } catch (IOException ignored) {
+                    } finally {
+                        latch.countDown();
                     }
-                } catch (IOException ignored) {
-                } finally {
-                    latch.countDown();
                 }
-            });
+            };
+            t.setDaemon(true);
             t.start();
         }
 
@@ -138,22 +143,25 @@ public class ConnectionTest extends HazelcastTestSupport {
 
         for (int i = 0; i < count; i++) {
             final Socket clientSocket = new Socket();
-            Thread t = Thread.ofVirtual().name("client-socket-" + i).unstarted(() -> {
-                try {
-                    if (cc.incrementAndGet() > count / 5 && Math.random() > .87f && flag.compareAndSet(false, true)) {
-                        serverSocket.close();
-                    } else {
-                        clientSocket.setSoTimeout(1000 * 5);
-                        clientSocket.connect(new InetSocketAddress(13131));
-                        connected.incrementAndGet();
-                        InputStream in = clientSocket.getInputStream();
-                        in.read();
+            Thread t = new Thread("client-socket-" + i) {
+                public void run() {
+                    try {
+                        if (cc.incrementAndGet() > count / 5 && Math.random() > .87f && flag.compareAndSet(false, true)) {
+                            serverSocket.close();
+                        } else {
+                            clientSocket.setSoTimeout(1000 * 5);
+                            clientSocket.connect(new InetSocketAddress(13131));
+                            connected.incrementAndGet();
+                            InputStream in = clientSocket.getInputStream();
+                            in.read();
+                        }
+                    } catch (IOException ignored) {
+                    } finally {
+                        latch.countDown();
                     }
-                } catch (IOException ignored) {
-                } finally {
-                    latch.countDown();
                 }
-            });
+            };
+            t.setDaemon(true);
             t.start();
         }
 
@@ -195,13 +203,13 @@ public class ConnectionTest extends HazelcastTestSupport {
         final CountDownLatch ll = new CountDownLatch(1);
         final AtomicInteger cc = new AtomicInteger();
 
-        Thread.ofVirtual().start(() -> {
+        new Thread(() -> {
             try {
                 ll.await(1, TimeUnit.MINUTES);
                 hz.getLifecycleService().terminate();
             } catch (InterruptedException ignored) {
             }
-        });
+        }).start();
 
         final Collection<Socket> sockets = Collections.newSetFromMap(new ConcurrentHashMap<>());
         final AtomicInteger k0 = new AtomicInteger();
@@ -231,7 +239,8 @@ public class ConnectionTest extends HazelcastTestSupport {
                     latch.countDown();
                 }
             };
-            Thread t = Thread.ofVirtual().name("socket-thread-" + i).unstarted(task);
+            Thread t = new Thread(task, "socket-thread-" + i);
+            t.setDaemon(true);
             t.start();
         }
 
